# sports_oracle

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.gpu.yml  docker-compose.override.yml  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/agent/: graph.py  llm.py  prompts.py  state.py
apps/api/app/agent/nodes/: cache.py  eval_capture.py  predict.py  retrieve.py  router.py  synthesize.py  tools.py
apps/api/app/api/: routes_chat.py  routes_health.py  routes_history.py  routes_metrics.py
apps/api/app/mcp/: client.py
apps/api/app/services/: __init__.py  citations.py  persistence.py  semantic_cache.py
apps/api/tests/: test_citations.py  test_eval_capture.py  test_graph_flow.py  test_metrics_api.py
apps/ingest/: Dockerfile  pyproject.toml  worker.py
apps/ingest/jobs/: eval_judge.py  news.py  reference_docs.py  reindex.py
apps/ingest/tests/: test_eval_judge.py
apps/mcp_sports/: Dockerfile  pyproject.toml  server.py
apps/mcp_sports/core/: __init__.py  httpclient.py  normalize.py  registry.py
apps/mcp_sports/providers/: __init__.py  apisports.py  balldontlie.py  base.py  espn.py  thesportsdb.py
apps/mcp_sports/tests/: __init__.py  conftest.py  test_espn_normalization.py  test_normalize_helpers.py  test_providers.py
apps/mcp_sports/tests/fixtures/: espn_scoreboard.json  espn_standings.json
apps/mcp_sports/tools/: __init__.py  _helpers.py  fixtures.py  h2h.py  injuries.py  odds.py  search.py  standings.py  stats.py
apps/web/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
apps/web/e2e/: chat.spec.ts  dashboards.spec.ts  fixtures.ts
apps/web/src/: App.tsx  index.css  main.tsx  test-setup.ts  types.ts
apps/web/src/api/: client.ts  metrics.ts
apps/web/src/components/: ChatWindow.tsx  Citations.tsx  Composer.tsx  ConfidenceBadge.tsx  MessageBubble.tsx  PredictionCard.tsx  Sidebar.tsx  ToolChip.tsx
apps/web/src/components/__tests__/: ConfidenceBadge.test.tsx  EvalDashboard.test.tsx  MessageBubble.test.tsx  RoutingDashboard.test.tsx  graph.test.ts
apps/web/src/components/dashboards/: DashboardNav.tsx  EvalDashboard.tsx  GraphPanel.tsx  RoutingDashboard.tsx  graph.ts
apps/web/src/hooks/: useChatStream.ts  usePolling.ts
apps/web/src/store/: conversations.ts
data/reference/: fifa_world_cup_format.md  nba_playoff_format.md  soccer_offside_rule.md
docs/: ARCHITECTURE.md  PROGRESS.md  SKILLS.md
