[project]
name = "sports-oracle-api"
version = "0.1.0"
description = "FastAPI + LangGraph agent for the Sports Oracle (MCP client + RAG)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.5,<3",
    "sse-starlette>=2.1,<3",
    "langgraph>=0.2.50,<0.4",
    "langgraph-checkpoint-postgres>=2.0,<3",
    "langchain-core>=0.3,<0.4",
    "langchain-anthropic>=0.3,<0.4",
    "langchain-mcp-adapters>=0.1,<0.2",
    "mcp>=1.2,<2",
    "anthropic>=0.40,<1",
    "httpx>=0.27,<0.28",
    "psycopg[binary,pool]>=3.2,<4",
    # local workspace packages (installed via -e in the Dockerfile)
    "sports-oracle-shared",
    "sports-oracle-rag",
    "sports-oracle-db",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<0.25",
    "respx>=0.21,<0.22",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
