[project]
name = "sports-oracle-ingest"
version = "0.1.0"
description = "Sports Oracle ingest worker: RSS news, reference docs, and cache reindex."
requires-python = ">=3.11"
dependencies = [
    "sports-oracle-rag>=0.1.0",
    "apscheduler>=3.10,<4",
    "feedparser>=6,<7",
    "pydantic-settings>=2.3,<3",
    "httpx>=0.27,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["jobs"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
