[project]
name = "sports-oracle-ingest"
version = "0.1.0"
description = "Sports Oracle ingest worker: RSS news, reference docs, and cache reindex."
requires-python = ">=3.11"
dependencies = [
    "sports-oracle-rag>=0.1.0",
    "sports-oracle-db>=0.1.0",
    # Eval scoring deps (RAGAS judge); the judge runs only on this worker.
    "sports-oracle-eval[ragas]>=0.1.0",
    "apscheduler>=3.10,<4",
    "feedparser>=6,<7",
    "pydantic-settings>=2.3,<3",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<0.25",
    "aiosqlite>=0.20",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["jobs"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
